--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,8 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.11"
+  apt-packages:
+    - krb5-user
     # You can also specify other tool versions:
     # nodejs: "23"
     # rust: "1.82"
