--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
   tools:
     python: "3.11"
   apt_packages:
-    - krb5-user
+    - krb5-config
     # You can also specify other tool versions:
     # nodejs: "23"
     # rust: "1.82"
