--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,6 +12,7 @@ build:
     python: "3.11"
   apt_packages:
     - krb5-config
+    - libkrb5-dev
     # You can also specify other tool versions:
     # nodejs: "23"
     # rust: "1.82"
