Added tdms file support.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ build/**
 dist/**
 src/slypi.egg-info/**
 tests/integration/test-lodestar.py
+tests/integration/test-slypi-tdms.py
+example-data/spinodal-out
+example-data/cars-no-nans.csv
+example-data/cars-pca.csv
+src/slypi/dac/README*
