--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,11 @@ authors = [
   {email = "smartin@sandia.gov"},
 ]
 readme = "README.md"
-version = "1.1.3"
+version = "1.2.0"
 license-files = [
     "LICENSE",
 ]
+requires-python = ">=3.0,<3.14"
 
 classifiers = [
     "Programming Language :: Python :: 3",
